Ignore redundant calls to ScrollAnchor::save.

Flex scrollers go through LayoutBlock::layout multiple times; we call save()
every time, but make only one call to restore() when we exit the outermost
DelayScrollPositionClampScope (see http://crrev.com/412450).

The second save() cleared ScrollAnchor::m_scrollAnchorDisablingStyleChanged,
because the first layout had cleared the corresponding LayoutObject bit.

BUG=641815

Review-Url: https://codereview.chromium.org/2304493002
Cr-Commit-Position: refs/heads/master@{#416143}

Former-commit-id: 4217fd09fbd83f49bfa33288311192a1ef067361